Download, Album 기능 추가.